# Python_Piscine

./: README.md
python_0_Starting/ex00/: Hello.py
python_0_Starting/ex01/: format_ft_time.py
python_0_Starting/ex02/: find_ft_type.py
python_0_Starting/ex03/: NULL_not_found.py
python_0_Starting/ex04/: whatis.py
python_0_Starting/ex05/: building.py
python_0_Starting/ex06/: filterstring.py  ft_filter.py
python_0_Starting/ex07/: sos.py
python_0_Starting/ex08/: Loading.py
python_0_Starting/ex09/ft_package/: README.md  pyproject.toml
python_0_Starting/ex09/ft_package/src/ft_package/: __init__.py  calculation.py  count_in_list.py
python_1_Array/ex00/: give_bmi.py  tester.py
python_1_Array/ex01/: array2D.py  tester.py  tester2.py
python_1_Array/ex02/: load_image.py  tester.py
python_1_Array/ex03/: load_image.py  zoom.py
python_1_Array/ex04/: load_image.py  rotate.py
python_1_Array/ex05/: pimp_image.py  tester.py
python_2_DataTable/ex00/: load_csv.py  tester.py
python_2_DataTable/ex01/: aff_life.py
python_2_DataTable/ex02/: aff_pop.py  load_csv.py
python_2_DataTable/ex03/: projection_life.py
python_3_OOP/ex00/: S1E9.py
python_3_OOP/ex01/: S1E7.py  tester.py
python_3_OOP/ex02/: DiamondTrap.py  S1E7.py  S1E9.py  tester.py
python_3_OOP/ex03/: ft_calculator.py  tester.py
python_3_OOP/ex04/: ft_calculator.py
python_4_Dod/ex00/: statistics.py
python_4_Dod/ex01/: in_out.py
python_4_Dod/ex02/: callLimit.py
python_4_Dod/ex03/: new_student.py  tester.py
