[build-system]
requires = ["hatchling", "packaging"]
build-backend = "hatchling.build"


[project]
name = "ft_package"
version = "0.0.1"
authors = [
    {name="tsuchen"},
    {email="tsuchen@42.fr"},
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICEN[CS]E*"]


[project.urls]
Homepage = "https://github.com/Tsunghao-C/ft_package"
